# sharkpack

./: CMakeLists.txt  LICENSE  README.md  additional-profiles.cmake  asan.cmake  utils.cmake
include/sharkpack/: errors.h  sharkpack.h  typedefs.h
include/sharkpack/backends/: compress.h  mm.h
src/backends/: backends.cmake
src/backends/compress/: compress.c
src/backends/compress/rle/: rle.backend.cmake  rle.c  rle.check.cmake
src/backends/mm/linux/: linux.backend.cmake  linux.c  linux.check.cmake
tools/compressor/: main.c
